// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar and secondary navbar navbar with page nav button 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md d-print-none navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-left"
      >
        
        <a
          class="navbar-brand"
          href="#"
          title="Home"
        >
          Your Logo
        </a>
        
      </div>
      <div
        class="navbar-default"
      >
        <ul
          class="navbar-nav me-auto mt-2 mt-lg-0"
        >
          
          <li
            class="current"
          >
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
          
        </ul>
      </div>
      <div
        class="navbar-right"
      >
        <!--v-if-->
        <button
          aria-label="Switch to dark mode"
          class="btn btn-sm btn-outline-secondary dark-mode-toggle navbar-dark-mode-toggle"
          title="Switch to dark mode"
          type="button"
        >
          <span
            aria-hidden="true"
            class="dark-mode-toggle-icon"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1a.5.5 0 0 1 .5.5v1.5a.5.5 0 0 1-1 0V1.5A.5.5 0 0 1 8 1zm0 10
          a.5.5 0 0 1 .5.5V13a.5.5 0 0 1-1 0v-1.5A.5.5 0 0 1 8 11zm7-3a.5.5 0 0
          1-.5.5H13a.5.5 0 0 1 0-1h1.5A.5.5 0 0 1 15 8zM3 8a.5.5 0 0 1-.5.5H1a.5.5
          0 0 1 0-1h1.5A.5.5 0 0 1 3 8zm9.95-4.536a.5.5 0 0 1 0 .707L11.89 5.232a.5.5
          0 1 1-.707-.707l1.06-1.061a.5.5 0 0 1 .707 0zM4.818 11.182a.5.5 0 0 1 0
          .707l-1.06 1.061a.5.5 0 1 1-.708-.707l1.061-1.06a.5.5 0 0 1 .707 0zm8.132
          1.768a.5.5 0 0 1-.707 0l-1.06-1.06a.5.5 0 1 1 .707-.708l1.06 1.061a.5.5
          0 0 1 0 .707zM4.818 4.818a.5.5 0 0 1-.707 0L3.05 3.757a.5.5 0 0 1 .708
          -.707l1.06 1.06a.5.5 0 0 1 0 .708z"
              />
              <path
                d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </nav>
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    
    <div
      class="nav-menu-container"
    >
      <!--v-if-->
    </div>
    
  </div>
</div>
`;

exports[`Navbar and secondary navbar navbar with site and page nav buttons 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md d-print-none navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-left"
      >
        
        <a
          class="navbar-brand"
          href="#"
          title="Home"
        >
          Your Logo
        </a>
        
      </div>
      <div
        class="navbar-default"
      >
        <ul
          class="navbar-nav me-auto mt-2 mt-lg-0"
        >
          
          <li
            class="current"
          >
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
          
        </ul>
      </div>
      <div
        class="navbar-right"
      >
        <!--v-if-->
        <button
          aria-label="Switch to dark mode"
          class="btn btn-sm btn-outline-secondary dark-mode-toggle navbar-dark-mode-toggle"
          title="Switch to dark mode"
          type="button"
        >
          <span
            aria-hidden="true"
            class="dark-mode-toggle-icon"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1a.5.5 0 0 1 .5.5v1.5a.5.5 0 0 1-1 0V1.5A.5.5 0 0 1 8 1zm0 10
          a.5.5 0 0 1 .5.5V13a.5.5 0 0 1-1 0v-1.5A.5.5 0 0 1 8 11zm7-3a.5.5 0 0
          1-.5.5H13a.5.5 0 0 1 0-1h1.5A.5.5 0 0 1 15 8zM3 8a.5.5 0 0 1-.5.5H1a.5.5
          0 0 1 0-1h1.5A.5.5 0 0 1 3 8zm9.95-4.536a.5.5 0 0 1 0 .707L11.89 5.232a.5.5
          0 1 1-.707-.707l1.06-1.061a.5.5 0 0 1 .707 0zM4.818 11.182a.5.5 0 0 1 0
          .707l-1.06 1.061a.5.5 0 1 1-.708-.707l1.061-1.06a.5.5 0 0 1 .707 0zm8.132
          1.768a.5.5 0 0 1-.707 0l-1.06-1.06a.5.5 0 1 1 .707-.708l1.06 1.061a.5.5
          0 0 1 0 .707zM4.818 4.818a.5.5 0 0 1-.707 0L3.05 3.757a.5.5 0 0 1 .708
          -.707l1.06 1.06a.5.5 0 0 1 0 .708z"
              />
              <path
                d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </nav>
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    
    <div
      class="nav-menu-container"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    
  </div>
</div>
`;

exports[`Navbar and secondary navbar navbar with site nav button 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md d-print-none navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-left"
      >
        
        <a
          class="navbar-brand"
          href="#"
          title="Home"
        >
          Your Logo
        </a>
        
      </div>
      <div
        class="navbar-default"
      >
        <ul
          class="navbar-nav me-auto mt-2 mt-lg-0"
        >
          
          <li
            class="current"
          >
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
          
        </ul>
      </div>
      <div
        class="navbar-right"
      >
        <!--v-if-->
        <button
          aria-label="Switch to dark mode"
          class="btn btn-sm btn-outline-secondary dark-mode-toggle navbar-dark-mode-toggle"
          title="Switch to dark mode"
          type="button"
        >
          <span
            aria-hidden="true"
            class="dark-mode-toggle-icon"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1a.5.5 0 0 1 .5.5v1.5a.5.5 0 0 1-1 0V1.5A.5.5 0 0 1 8 1zm0 10
          a.5.5 0 0 1 .5.5V13a.5.5 0 0 1-1 0v-1.5A.5.5 0 0 1 8 11zm7-3a.5.5 0 0
          1-.5.5H13a.5.5 0 0 1 0-1h1.5A.5.5 0 0 1 15 8zM3 8a.5.5 0 0 1-.5.5H1a.5.5
          0 0 1 0-1h1.5A.5.5 0 0 1 3 8zm9.95-4.536a.5.5 0 0 1 0 .707L11.89 5.232a.5.5
          0 1 1-.707-.707l1.06-1.061a.5.5 0 0 1 .707 0zM4.818 11.182a.5.5 0 0 1 0
          .707l-1.06 1.061a.5.5 0 1 1-.708-.707l1.061-1.06a.5.5 0 0 1 .707 0zm8.132
          1.768a.5.5 0 0 1-.707 0l-1.06-1.06a.5.5 0 1 1 .707-.708l1.06 1.061a.5.5
          0 0 1 0 .707zM4.818 4.818a.5.5 0 0 1-.707 0L3.05 3.757a.5.5 0 0 1 .708
          -.707l1.06 1.06a.5.5 0 0 1 0 .708z"
              />
              <path
                d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </nav>
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    
    <div
      class="nav-menu-container"
    >
      <!--v-if-->
    </div>
    
  </div>
</div>
`;

exports[`Navbar and secondary navbar navbar without site and page nav buttons 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md d-print-none navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-left"
      >
        
        <a
          class="navbar-brand"
          href="#"
          title="Home"
        >
          Your Logo
        </a>
        
      </div>
      <div
        class="navbar-default"
      >
        <ul
          class="navbar-nav me-auto mt-2 mt-lg-0"
        >
          
          <li
            class="current"
          >
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
          
        </ul>
      </div>
      <div
        class="navbar-right"
      >
        <!--v-if-->
        <button
          aria-label="Switch to dark mode"
          class="btn btn-sm btn-outline-secondary dark-mode-toggle navbar-dark-mode-toggle"
          title="Switch to dark mode"
          type="button"
        >
          <span
            aria-hidden="true"
            class="dark-mode-toggle-icon"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1a.5.5 0 0 1 .5.5v1.5a.5.5 0 0 1-1 0V1.5A.5.5 0 0 1 8 1zm0 10
          a.5.5 0 0 1 .5.5V13a.5.5 0 0 1-1 0v-1.5A.5.5 0 0 1 8 11zm7-3a.5.5 0 0
          1-.5.5H13a.5.5 0 0 1 0-1h1.5A.5.5 0 0 1 15 8zM3 8a.5.5 0 0 1-.5.5H1a.5.5
          0 0 1 0-1h1.5A.5.5 0 0 1 3 8zm9.95-4.536a.5.5 0 0 1 0 .707L11.89 5.232a.5.5
          0 1 1-.707-.707l1.06-1.061a.5.5 0 0 1 .707 0zM4.818 11.182a.5.5 0 0 1 0
          .707l-1.06 1.061a.5.5 0 1 1-.708-.707l1.061-1.06a.5.5 0 0 1 .707 0zm8.132
          1.768a.5.5 0 0 1-.707 0l-1.06-1.06a.5.5 0 1 1 .707-.708l1.06 1.061a.5.5
          0 0 1 0 .707zM4.818 4.818a.5.5 0 0 1-.707 0L3.05 3.757a.5.5 0 0 1 .708
          -.707l1.06 1.06a.5.5 0 0 1 0 .708z"
              />
              <path
                d="M8 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </nav>
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    
    <div />
    
  </div>
</div>
`;
